Working on the table component.

--- a/src/GGL.Web.App/src/shared/components/button/button.component.scss
+++ b/src/GGL.Web.App/src/shared/components/button/button.component.scss
@@ -68,7 +68,7 @@
     background-color: $color-tomato;
     border: solid 0.1rem $color-red;    
     &:hover {
-        background-color: $color-light-green;
+        background-color: $color-salmon;
     }
 }
 
