--- a/src/GGL.Web.App/src/shared/components/table/table.component.scss
+++ b/src/GGL.Web.App/src/shared/components/table/table.component.scss
@@ -1,23 +1,24 @@
 @import '../../../assets/css/color.scss';
 
-.ggl-grid {
+.ggl-table {
     width: 100%;
 
-    .grid-header {
+    .table-header {
         display: inline-flex;
         background-color: $color-gray;
         color: $color-white;
         width: 100%;
-        font-weight: 600;
-    }
-
-    .grid-column {
-        padding: 1rem;
-        min-width: 10rem;
+        font-weight: 600;       
         text-align: center;
     }
 
-    .grid-header-action {
+    .table-column {
+        padding: 1rem;
+        min-width: 10rem;
+ 
+    }
+
+    .table-header-action {
         background-color: $color-white-smoke;
         padding: 0.2rem;
         margin-bottom: .2rem;
