List component addition and updated css.

--- a/src/GGL.Web.App/src/shared/components/label/label.component.scss
+++ b/src/GGL.Web.App/src/shared/components/label/label.component.scss
@@ -2,14 +2,14 @@
 
 .ggl-label {
     span {
-        color: $color-black;
+        color: $color-gray;
     }    
 }
 
 .link {
     cursor: pointer;
     span {
-        color: $color-blue;
+        color: $color-light-blue;
 
         &:hover {
             text-decoration: underline;
