--- a/src/GGL.Web.App/src/assets/css/color.scss
+++ b/src/GGL.Web.App/src/assets/css/color.scss
@@ -6,6 +6,7 @@ $color-maroon-red: #C72A2A;
 $color-green: #5cb85c;
 $color-dark-green: #006400;
 $color-blue: #0000FF;
+$color-light-blue: #6495ED;
 $color-alice-blue: #F0F8FF;
 $color-black: #000000;
 $color-skyblue: #87CEEB;
