--- a/src/GGL.Web.App/src/styles.scss
+++ b/src/GGL.Web.App/src/styles.scss
@@ -64,3 +64,26 @@ body { margin: 0; font-family: Arial; font-size: 10pt; height: 100vh;}
 .no-margin {
 	margin: 0;
 }
+
+
+
+/* Works on Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color: $color-gray $color-white-smoke;
+  }
+  
+  /* Works on Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: $color-white-smoke;
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color: $color-light-gray;
+    border-radius: 20px;
+    border: 3px solid $color-light-gray;
+  }
