--- a/src/GGL.Web.App/src/shared/components/label/label.component.scss
+++ b/src/GGL.Web.App/src/shared/components/label/label.component.scss
@@ -1,8 +1,10 @@
 @import '../../../assets/css/color.scss';
 
 .ggl-label {
+    display: inline-flex;
     span {
         color: $color-gray;
+        padding-left: .5rem;
     }    
 }
 
