--- a/src/GGL.Web.App/src/shared/components/table/table-row/table-row.component.html
+++ b/src/GGL.Web.App/src/shared/components/table/table-row/table-row.component.html
@@ -1,7 +1,12 @@
-<div class="table-row" (click)="handleRowClick()">
+<div class="table-row" (click)="handleRowClick()" [ngClass]="{'selection': selectable}">
+    <ggl-table-column 
+        *ngIf="selectable"
+        [selected]="rowSelected"
+        [selectable]="selectable">
+    </ggl-table-column>
     <ggl-table-column 
         *ngFor="let column of item.columns"
-        [selectable]="selectable"
+        [width]="columnWidth"
         [column]="column">
     </ggl-table-column>
 </div>
