--- a/src/GGL.Web.App/src/shared/test-page/test-page.component.html
+++ b/src/GGL.Web.App/src/shared/test-page/test-page.component.html
@@ -338,6 +338,7 @@
                 [showDelete]="showAddNew" 
                 [showAddNew]="showAddNew" 
                 [rows]="tableRows"
+                [height]="350"
                 [selectable]="selectable" 
                 [headers]="tableHeaders">
             </ggl-table>
