Working on table filters.

--- a/src/GGL.Web.App/src/shared/components/label/label.component.scss
+++ b/src/GGL.Web.App/src/shared/components/label/label.component.scss
@@ -4,8 +4,11 @@
     display: inline-flex;
     span {
         color: $color-gray;
+    }
+    
+    .icon {
         padding-left: .5rem;
-    }    
+    }
 }
 
 .link {
