--- a/src/GGL.Web.App/src/shared/components/label/label.component.html
+++ b/src/GGL.Web.App/src/shared/components/label/label.component.html
@@ -1,4 +1,4 @@
 <div class="ggl-label">
     <ggl-icon *ngIf="icon && showIcon" [disabled]="isDisabled" [icon]="icon" [size]="iconSize" [label]="text" (clicked)="handleClick()"></ggl-icon>
-    <span (click)="handleClick()" [ngClass]="{'link': clickable && !isDisabled, 'disabled': isDisabled}">{{text}}</span>
+    <span (click)="handleClick()" [ngClass]="{'link': clickable && !isDisabled, 'disabled': isDisabled, 'icon': icon && showIcon}">{{text}}</span>
 </div>
